# ml-sentiment-service

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  env.example
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  errors.py  main.py  models.py  schemas.py
backend/app/routers/: analysis.py  health.py  history.py
backend/app/services/: ml_service.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: app.py
frontend/app/pages/: 1_analyze.py  2_history.py  3_dashboard.py
nginx/: nginx.conf
