[project]
name = "sentiment-backend"
version = "1.0.0"
description = "ML Sentiment Analysis API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "redis>=5.0",
    "celery[redis]>=5.4.0",
    "transformers>=4.40.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
]
